third_party/rust/chromium_crates_io/vendor/lazy_static-v1/tests/compile_fail/incorrect_visibility_restriction.rs
#[macro_use]
extern crate lazy_static;

lazy_static! {
    pub(nonsense) static ref WRONG: () = ();
}

fn main() { }
